<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bookaholic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="no_items">No items to display!</string>
    
    <string name="books">Books</string>
    <string name="books_in_list">Books in my list:</string>
    <string name="book_details">Book Details</string>
    <string name="available_bookshops">Available Bookshops:</string>
    <string name="bookshops">Bookshops</string>
    <string name="bookshop_details">Bookshop Details</string>
    <string name="available_books">Available Books:</string>
    <string name="my_book_lists">My Book Lists</string>
    <string name="add_new_list">Add New Book List</string>
    <string name="add_new_book">Add New Book</string>
    <string name="booklistdetails">Book List Details</string>
    <string name="travel_details">My Travel Details</string>
    
    <string name="search_books">Search books..</string>
    <string name="search_bookshops">Search bookshops..</string>
    
    <string name="my_list_name">My book list name</string>
    <string name="my_budget">My budget (optional)</string>
    
    <string name="list_name">Book List Name:</string>
    <string name="est_budget">Estimated Budget(Rs.):</string>
    <string name="est_amount">Estimated Amount:</string>
    <string name="budget">My Budget:</string>
    
    <string name="author">Author:</string>
    <string name="price">Price:</string>
    <string name="title">Book Title:</string>
    
    <string name="bookshop_name">Bookshop Name:</string>
    <string name="stall">Stall No.:</string>
    <string name="contact">Phone No.:</string>
    
    <string name="save">Save</string>
    <string name="add_book">Add a book</string>
    <string name="get_path">Get path</string>
    <string name="call">Call</string>
    <string name="ok">OK</string>
    <string name="add_list">Add new book list</string>
    
    <string name="in_fair">In the book fair</string>
    <string name="out_fair">Outside book fair</string>
    <string name="set_start">Set your starting point..</string>
    
    <string name="nearest">Please enter the stall you see nearest..</string>
    <string name="where_now">Where are you now?</string>
    
    <string-array name="options_addbook">
        <item>Get book details</item>
        <item>Add book to list</item>
    </string-array>
    
    <string-array name="options_booklist">
        <item>View book list</item>
        <item>Delete</item>
    </string-array>
    
    <string-array name="options_booksinlist">
        <item>View book details</item>
        <item>Delete</item>
    </string-array>
    
</resources>
