<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10sp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booklistdetails"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/listBooks"
        android:layout_toRightOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/tvBookTitle"
        android:layout_alignRight="@+id/tvBookTitle" />

    <TextView
        android:id="@+id/tvBookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/tvBookAuthor"
        android:layout_alignRight="@+id/tvBookAuthor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/list_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/est_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp"
        android:text="@string/budget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="17dp"
        android:text="@string/books_in_list"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bAddBook"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5" >
    </ListView>

    <Button
        android:id="@+id/bTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bAddBook"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/travel_details" />

    <Button
        android:id="@+id/bAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bTravel"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/add_book" />

</RelativeLayout>