<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10sp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookshop_details"
        android:textColor="@android:color/holo_orange_dark"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:text="@string/bookshop_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="24dp"
        android:text="@string/stall"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="26dp"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvBookshopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@android:id/list"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvBookshopStall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/tvBookshopName"
        android:layout_alignRight="@+id/tvBookshopName" />

    <TextView
        android:id="@+id/tvBookshopPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/tvBookshopStall"
        android:layout_alignRight="@+id/tvBookshopStall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="76dp"
        android:text="@string/available_books"
        android:textColor="@android:color/holo_orange_dark"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView5" >
    </ListView>

    <Button
        android:id="@+id/bGetSrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="17dp"
        android:text="@string/get_path" />

    <Button
        android:id="@+id/bCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bGetSrc"
        android:layout_alignBottom="@+id/bGetSrc"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/bGetSrc"
        android:text="@string/call" />

</RelativeLayout>