<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <Button
        android:id="@+id/bGetDir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/get_path" />

    <EditText
        android:id="@+id/etSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bGetDir"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/nearest" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etSource"
        android:layout_alignLeft="@+id/etSource"
        android:text="@string/where_now"
        android:textColor="@android:color/holo_orange_dark"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
